dnl -*- sh -*-
dnl
dnl  Authors:
dnl    Michael Mehl (mehl@dfki.de)
dnl
dnl  Contributors:
dnl    optional, Contributor's name (Contributor's email address)
dnl
dnl  Copyright:
dnl    Michael Mehl (1997)
dnl
dnl  Last change:
dnl    $Date$ by $Author$
dnl    $Revision$
dnl
dnl  This file is part of Mozart, an implementation
dnl  of Oz 3:
dnl     $MOZARTURL$
dnl
dnl  See the file "LICENSE" or
dnl     $LICENSEURL$
dnl  for information on usage and redistribution
dnl  of this file, and for a DISCLAIMER OF ALL
dnl  WARRANTIES.
dnl

dnl Process this file with autoconf to produce a configure script.

dnl *****************************************************************
dnl INITIALIZE
dnl *****************************************************************

dnl This will check that we are in the Oz directory and initiate
AC_INIT(Standard.oz)

OZ_INIT

dnl *****************************************************************
dnl set TOPDIR
dnl *****************************************************************

srcdira=`(cd $srcdir; pwd)`
AC_SUBST(srcdira)

dnl *****************************************************************
dnl Checks for programs.
dnl *****************************************************************

AC_PROG_INSTALL

AC_CHECK_PROGS(SH, sh bash ksh)
AC_CHECK_PROGS(RM, rm)
AC_CHECK_PROGS(MV, mv)
AC_CHECK_PROGS(LN, ln)
AC_CHECK_PROGS(MKDIR, mkdir)
AC_CHECK_PROGS(RMDIR, rmdir true)
AC_CHECK_PROGS(ECHO, echo)
AC_CHECK_PROGS(M4, gm4 m4)
AC_CHECK_PROGS(TRUE, true)

OZ_PATH_PROG(MKINSTALLDIRS, mkinstalldirs)

SRCPATH=.:$srcdir
AC_PATH_PROG(ENV2TYPE, env2type, , $SRCPATH)

OZ_PATH_PROG(INSTALLSRC, ozinstallsrc)
OZ_PATH_PROG(OZPLATFORM, ozplatform)
OZ_PATH_PROG(OZBATCH, ozbatch, OZBATCH=./ozbatch)

AC_MSG_CHECKING(for --enable-fun)
AC_ARG_ENABLE(fun,
  [--enable-fun  build the functorial compiler (default=no)])
if test "${enable_fun}" = yes; then
    AC_MSG_RESULT(yes)
    COMPILER_FUN=Compiler.ozc
    COMPILER_BIG=Compiler.big
else
    AC_MSG_RESULT(no)
    COMPILER_FUN=Compiler.fun
    COMPILER_BIG=Compiler.ozc
fi
AC_SUBST(COMPILER_FUN)
AC_SUBST(COMPILER_BIG)

dnl *****************************************************************
dnl FINALIZE
dnl *****************************************************************

AC_OUTPUT(Makefile)


errprint(ifdef([OZ_INIT],
 [],
 [autoconf failed: use 'autoconf -l ..' to include ../aclocal.m4.
]))
